update dockerfile for m1

--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -1,13 +1,12 @@
-FROM node:10-slim
-
+FROM node:12-alpine
 WORKDIR /frontend
-
 COPY package.json package-lock.json ./
-
-RUN npm install
-
-RUN npm install @vue/cli@4.3.0 -g
-
+RUN apk --no-cache --virtual build-dependencies add \
+        python2 \
+        make \
+        g++ \
+&& npm install \
+&& npm install @vue/cli@4.3.0 -g \
+&& apk del build-dependencies
 COPY . .
-
 CMD ["npm", "run", "serve"]
