--- a/src/frontend/Dockerfile
+++ b/src/frontend/Dockerfile
@@ -1,12 +1,13 @@
-FROM node:12-alpine
+FROM node:16-slim
+
 WORKDIR /frontend
+
 COPY package.json package-lock.json ./
-RUN apk --no-cache --virtual build-dependencies add \
-        python2 \
-        make \
-        g++ \
-&& npm install \
-&& npm install @vue/cli@4.3.0 -g \
-&& apk del build-dependencies
+
+RUN npm install
+
+RUN npm install @vue/cli@4.5.8 -g
+
 COPY . .
+
 CMD ["npm", "run", "serve"]
