--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -1,13 +1,10 @@
 # Check out https://hub.docker.com/_/node to select a new base image
-FROM node:16-slim
-
-# Set to a non-root built-in user `node`
-USER node
+FROM node:10-slim
 
 # Create app directory (with user `node`)
-RUN mkdir -p /home/node/app
+RUN mkdir /backend
 
-WORKDIR /home/node/app
+WORKDIR /backend
 
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
